@@ -27,6 +27,8 @@ v.0002 Skills and Trigger selection
 - Implemented Selecting card from Deck for skills
 - Implemented selecting own unit circle for skills (Completed Superior call)
 - Implemented Draw Trigger
+- Implemented Critical Trigger
+- Created TriggerStrategy to handle trigger inputs properly
 
 v.0001 Duel Creatures
 - Created Placeholder card
